# sync

crates/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/auth/src/hashing/: mod.rs
crates/auth/src/session/: data.rs
crates/auth/src/session/store/: mod.rs
crates/auth/src/session/store/impls/: mod.rs  provider.rs  scylla.rs
crates/auth/src/session/store/integration/: axum.rs
crates/auth/src/token/: access_token.rs  mod.rs  refresh_token.rs
crates/common/: Cargo.toml
crates/common/src/handlers/: mod.rs
crates/identity/: Cargo.toml
crates/identity/src/: main.rs  storage.rs
crates/identity/src/handlers/auth/: mod.rs
crates/identity/src/handlers/users/: me.rs
crates/identity/src/model/: user.rs
crates/libs/auth/: Cargo.toml
crates/libs/auth/src/: lib.rs
crates/libs/auth/src/util/: mod.rs
crates/libs/common/: Cargo.toml
crates/libs/common/src/events/: auth.rs  mod.rs
crates/messaging/: Cargo.toml  Dockerfile
crates/messaging/src/: handler.rs  lib.rs  main.rs  message.rs  state.rs  storage.rs
crates/messaging/src/handlers/: chat.rs  mod.rs
crates/messaging/src/model/: message.rs
crates/services/identity/: Cargo.toml  Dockerfile
crates/services/identity/src/: main.rs  state.rs
crates/services/messaging/: Cargo.toml  Dockerfile
crates/services/messaging/src/: main.rs  state.rs
crates/services/messaging/src/handlers/: chat.rs
crates/services/messaging/src/model/: message.rs
crates/services/users/: Cargo.toml  Dockerfile
crates/services/users/src/: main.rs  state.rs
crates/services/users/src/handlers/: me.rs  mod.rs  user.rs
crates/users/: Cargo.toml
crates/users/src/: lib.rs  main.rs  state.rs  storage.rs
crates/users/src/handlers/: credentials.rs  me.rs
crates/users/src/handlers/auth/: mod.rs  (+3 more)
crates/users/src/model/: user.rs
infra/: .gitignore
infra/k8s/: deploy.sh  seal-cert.pem
infra/k8s/cluster/kafka/: params.yaml
infra/k8s/identity/: configuration.yaml  deployment.yaml  ingress.yaml  scylladb.yaml  secret.sealed.yaml
infra/k8s/messaging/: configuration.yaml  deployment.yaml  ingress.yaml  scylladb.yaml  secret.sealed.yaml
infra/k8s/users/: configuration.yaml  deployment.yaml  ingress.yaml  scylladb.yaml  secret.sealed.yaml
infra/k8s/web/: configuration.yaml  deployment.yaml  ingress.yaml
web/: .dockerignore  .env  .env.production  Dockerfile  env.sh  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: index.css  main.tsx  router.ts  vite-env.d.ts
web/src/components/: header.tsx  logo.tsx  message.tsx
web/src/components/ui/: toaster.tsx
web/src/lib/: env.ts
web/src/lib/cases/: auth.ts
web/src/lib/model/: conn.ts  message.ts  user.ts
web/src/lib/state/: error.ts  messages.ts  user.ts  ws.ts
web/src/routes/: index.tsx  root.tsx  signin.tsx  signup.tsx
(+10 files in other folders)
