[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = "0.4.40"
cookie = "0.18.1"
hmac = "0.12.1"
jwt = "0.16.0"
scylla = { version = "1.1.0", features = ["chrono-04"], optional = true }
sha2 = "0.10.8"
uuid = "1.16.0"
axum = { version = "0.8.1", optional = true }

[features]
default = ["session-scylla", "axum"]
session-scylla = ["dep:scylla"]
axum = ["dep:axum"]
