[package]
name = "messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
chrono = { version = "0.4.40", features = ["serde"] }
flume = "0.11.1"
futures = "0.3.31"
mac_address = "1.1.8"
scylla = { version = "1.0.0", features = ["chrono-04"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v1"] }
common = { path = "../../libs/common" }
auth = { path = "../../libs/auth", default-features = false, features = [
  "axum",
  "session-provider",
] }
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
