[package]
name = "users"
version = "0.1.0"
edition = "2024"

[dependencies]
auth = { path = "../../libs/auth", default-features = false, features = [
  "session-provider",
  "axum",
] }
common = { path = "../../libs/common" }
axum = { version = "0.8.1", features = ["macros"] }
scylla = { version = "1.0.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde"] }
